#--------------------------------------------------------
# The CMakeLists.txt for:                       pGenRescue
# Author(s):                              Eric Wang
#--------------------------------------------------------

SET(SRC
  GenRescue.cpp
  GenRescue_Info.cpp
  main.cpp
)

ADD_EXECUTABLE(pGenRescue ${SRC})

TARGET_LINK_LIBRARIES(pGenRescue
   ${MOOS_LIBRARIES}
   geometry
   apputil
   mbutil
   m
   pthread)

